<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="@dimen/_5dp"
    android:layout_marginLeft="@dimen/_2dp"
    android:layout_marginRight="@dimen/_2dp"
    android:layout_marginTop="@dimen/_5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <trieu.propertyguru.base.view.InfoView
        android:id="@+id/layout_item_info_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </trieu.propertyguru.base.view.InfoView>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_item_main"
        android:padding="@dimen/_5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <TextView
            tools:text="123"
            android:id="@+id/layout_item_index"
            android:layout_width="@dimen/_36dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

            <TextView
                style="@style/ItemTitle"
                tools:text="Title"
                android:id="@+id/layout_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/layout_item_url"
                tools:text="URL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                tools:text="54 scores | 54 comments"
                android:id="@+id/layout_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>