<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_home_swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/fragment_home_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:visibility="gone"
            android:scrollbars="vertical"
            android:id="@+id/fragment_home_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

        <trieu.propertyguru.base.view.InfoView
            android:id="@+id/fragment_home_info_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </trieu.propertyguru.base.view.InfoView>

    </FrameLayout>
</android.support.v4.widget.SwipeRefreshLayout>

