<resources>
    <string name="app_name">PropertyGuru</string>
    <string name="points">points</string>
    <string name="by">by</string>
    <string name="comments">comment(s)</string>
    <string name="day">day(s)</string>
    <string name="hour">hour(s)</string>
    <string name="minute">minute(s)</string>
    <string name="second">second(s)</string>
    <string name="ago">ago</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="empty_data">Empty data!</string>
    <string name="error_no_internet">No internet connection, please check your netword connection</string>
    <string name="error_bad_network">Network is bad!!</string>
</resources>
